(re)started paper

--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -9,6 +9,7 @@
         "**/*.aux": true,
         "**/*.gz": true,
         "**/*.fdb*": true,
-        "**/*.bbl": true
+        "**/*.bbl": true,
+        "**/*~": true
     }
 }
