--- a/paper/.vscode/settings.json
+++ b/paper/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/*.gz": true,
         "**/*.fdb*": true,
         "**/*.bbl": true,
-        "**/*~": true
+        "**/*~": true,
+        "**/*.ptb": true
     }
 }
