--- a/paper/benchmarks/Makefile
+++ b/paper/benchmarks/Makefile
@@ -6,11 +6,15 @@ SOURCES = \
   2019Thiemann \
   2020Castro \
   2020Ciccone \
+  2020Rouvet \
+  2020Rouvet-lib \
   2020Zalakain \
   2022Jacobs \
+  2022Jacobs-lib \
   2023Sano \
   2025Padovani \
   2025Zackon \
+  2025Zackon-lib \
   $(NULL)
 
 TARGETS = \
