preparing for submission

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -13,9 +13,29 @@ MODULES = \
   Examples \
   $(NULL)
 
+SOURCES = \
+  $(TARGETS) \
+  sn-jnl.cls \
+  sn-mathphys-num.bst \
+  main.bib \
+  agda.sty \
+  prooftree.sty \
+  macros.tex \
+  abstract.tex \
+  main.tex \
+  introduction.tex \
+  calculus.tex \
+  agda.tex \
+  related.tex \
+  conclusion.tex \
+  $(NULL)
+
 TARGETS = $(MODULES:%=%.tex)
 
-all: $(TARGETS)
+all: PadovaniRaffaelli.zip
+
+PadovaniRaffaelli.zip: $(SOURCES)
+	zip $@ $^
 
 %.tex: %.lagda.tex
 	agda --latex-dir=. --latex $<
